2009-06-03  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/home/hd-render-manager.c (hd_render_manager_set_state): Return
	the g_debug print about state change back. When restarting damage
	tracking, do it from top to down.
	* src/mb/hd-comp-mgr.c (hd_comp_mgr_map_notify): Switch to composited
	mode if application, Status Menu, or a dialog appears in non-composited
	mode.
	(hd_comp_mgr_unmap_notify): Switch back to non-composited mode if the
	next window in the stack is non-composited.
	* tests/test-speed.c: Make the window fullscreen in non-composited
	mode.

2009-06-03  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/home/hd-home-view-container.c (backgrounds_dir_changed):
	* src/home/hd-home-view.c (CACHED_BACKGROUND_IMAGE_FILE_PNG,
	  CACHED_BACKGROUND_IMAGE_FILE_PVR, load_background_idle): Add support
	  for background-[1..4].png cached files.

2009-06-03  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/launcher/hd-launcher-tile.c (hd_launcher_tile_set_icon_name):
	Free old priv->icon_glow before setting the new one.

2009-06-03  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/tidy/Makefile.am
	* src/tidy/tidy-cached-group.c (Added)
	* src/tidy/tidy-cached-group.h (Added): New Clutter group that can 
	  draw its children onto a (currently half-size) texture (for use
	  with hibernated apps).

2009-06-02  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/util/hd-transition.c (hd_transition_play_sound):
	  Carelessness fix: undisable sounds

2009-06-02  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/util/hd-transition.c: Modified screen rotation transition to
	Martin Gimpl's latest idea.
	* data/transitions.ini: Modified rotation angle for new transition

2009-06-02  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#17944 Part of thumbnail in switcher view is shown above
		 the task switcher button in the mentioned scenario.

	* src/home/hd-render-manager.c (hd_render_manager_update_blur_state):